# nhmesh-telemetry

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/workflows/: docker-deploy.yml  ruff.yaml
docker/: README.md  docker-compose.yml  sample.env
docker/elasticsearch/: elasticsearch.yml
docker/mosquitto/: Dockerfile
docker/nhmesh-auth/: Dockerfile
docker/nhmesh-telemetry/: Dockerfile  Dockerfile.collector  Dockerfile.producer
docker/rmqtt/rmqtt/: rmqtt.toml
docker/rmqtt/rmqtt/rmqtt-plugins/: rmqtt-auth-http.toml
nhmesh-mqtt-auth/: .gitignore  Cargo.toml  config.yaml
nhmesh-mqtt-auth/api/: Cargo.toml
nhmesh-mqtt-auth/api/src/: config.rs  lib.rs  main.rs
nhmesh-mqtt-auth/api/src/models/: mod.rs  mqtt.rs  user.rs
nhmesh-mqtt-auth/api/src/routes/: mod.rs  user.rs
nhmesh-mqtt-auth/api/src/routes/mqtt/: mod.rs
nhmesh-mqtt-auth/api/tests/api/: health.rs  main.rs  mqtt.rs  user.rs  util.rs
nhmesh-mqtt-auth/entity/: Cargo.toml
nhmesh-mqtt-auth/entity/src/: lib.rs  user.rs
nhmesh-mqtt-auth/migration/: Cargo.toml
nhmesh-mqtt-auth/migration/src/: lib.rs  m20220101_000001_create_users_table.rs  m20250504_231730_create_superuser.rs
nhmesh-mqtt-auth/src/: config.rs  lib.rs  main.rs
nhmesh-mqtt-auth/src/models/: mod.rs  mqtt.rs
nhmesh-mqtt-auth/src/routes/: health.rs
nhmesh-mqtt-auth/tests/api/: health.rs  main.rs  util.rs
nhmesh-telemetry/: collector.py  consumer.py  producer.py  schema.md
nhmesh-telemetry/utils/: deduplicated_queue.py  envdefault.py  node_cache.py  number_utils.py  traceroute_manager.py
