[project]
name = "nhmesh-telemetry"
version = "0.1.0"
description = ""
authors = [
    {name = "grleblanc",email = "greg@glsec.us"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "paho-mqtt (>=2.1.0,<3.0.0)",
    "meshtastic (>=2.6.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
