[package]
name = "nhmesh-mqtt-auth"
version = "0.1.0"
edition = "2024"

[lib]
name = "nhmesh_mqtt_auth"
path = "src/lib.rs"

[[bin]]
name = "nhmesh-mqtt-auth"
path = "src/main.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
